bugfix(profile) center slider messages with align items

--- a/src/app/modules/profile/overview/overview.page.scss
+++ b/src/app/modules/profile/overview/overview.page.scss
@@ -47,6 +47,10 @@
   padding-bottom: 2rem;
 }
 
+::ng-deep .swiper-wrapper {
+  align-items: center;
+}
+
 ::ng-deep .swiper-pagination-bullets {
   bottom: 0 !important;
 }
